--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preval.macro": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.2",
     "react-waypoint": "^10.1.0",
